	(CygbuildPatchListDisplay): Remove unnecessary `cat'. Add sort -u.
	(CygbuildCommandMain): Add alias `pcheck'
	(CygbuildVersionInfo): Improve parsing packages like
	foo_0.4.0-test5
	(CygbuildCmdPublishSignature): Delete trailing slash from
	input arg `dest'.
	(CygbuildCmdPublishExternal): Send $PKG to external publish
	program.
	(CygbuildReadmeReleaseMatchCheck): Improve release check.

2008-01-31  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain):
	Fix typo at in variable `cygbuild_opt_exclude_version_control'.

2008-01-26  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (cygbuild_opt_exclude_version_control):
	Add ignore pattern for quilt's state directories.

2007-12-21  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (Version): Support foo1.2.3
	(Package): Support foo1.2.3

	* bin/cygbuild.sh: (CygbuildCygcheckLibraryDepListFull): New,
	replaces `CygbuildObjDumpLibraryDepList'.
	(CygbuildCygcheckLibraryDepMain): Use
	`CygbuildCygcheckLibraryDepListFull'.
	(CygbuildCygcheckLibraryDepMain): Add error checking.
	(CygbuildCygcheckLibraryDepGrepPgkNamesMain): Add error checking.
	(CygbuildVersionInfo): Support foo1.2.3
	(CygbuildFilePackageGuessFromDirectory): Loosend version check.
	(CygbuildCmdInstallCheckPkgDocdir); Ignore certain files.
	(CygbuildHelpShort): Mention long options.
	(CygbuildInstallTaropt2type): New.
	(CygbuildInstallPackageDocs): Improve treatment of
	CYGWIN-PATCHES/install.tar.options
	(CygbuildInstallPackageInfo): Ignore .sinst
	(CygbuildTreeSymlinkCopy): Remove egrep and use find -prune.
	Delete *.dll *.la *.so if included in original package.
	(CygbuildConfCC): Adjust --option list output (perl call).

2007-12-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Mention command
	`almostall'.

	* bin/cygbuild.sh (CygbuildMakefileRunInstallPythonFix):
	Check manual page location and fix it if needed.